# CMake-Tutorial

./: .editorconfig  CMakeLists.txt  CMakePresets.json  License.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: Additional.cmake  CompilerOptions.cmake  NinjaMultiConfig.cmake  Test.cmake
src/: AppConfig.h.in  CMakeLists.txt  CTestConfig.cmake  Tutorial.cpp  TutorialConfig.h.in
src/ArgParser/: ArgParser.cpp  CMakeLists.txt
src/ArgParser/include/: ArgParse.h
src/MathFunctions/: CMakeLists.txt  MakeSqrtTable.cmake  MakeSqrtTable.cpp  MathFunctions.cpp  mysqrt.cpp  mysqrt.h
src/MathFunctions/cmake/: CheckStandardLibrary.cmake  MakeSqrtTable.cmake  SqrtLib.cmake
src/cmake/: AppConfig.cmake
tests/: CMakeLists.txt
tests/app_tests/: CMakeLists.txt
tests/factorial_tests/: CMakeLists.txt  mytest.cpp
tests/mathfunctions_tests/: CMakeLists.txt  sqrt_tests.cpp
thirdParties/: CMakeLists.txt
